# base-images

./: README.md  base-image-usage-report.yaml  config.yaml  sync-ghcr-all.yml  sync-ghcr.yml
.github/workflows/: audit.yml  build-magpi.yml  build.yml  delete-test.yml  images-are-public.yml  presubmit-image-documented.yml  presubmit-image-exists.yaml  presubmit-image-format.yml  presubmit-signed-images-are-signed.yml  scan.yml  sync.yml  update-image-digests.yml
container-audit/: go.mod  go.sum
container-audit/cmd/: container-audit.go
examples/: clusterimagepolicy-example.yaml
images/almalinux-gsm/: Dockerfile  gsm.conf  gsm.exp
images/alpine-gdal/: Dockerfile
images/alpine-nginx-rtmp-stream/: Dockerfile
images/chart-alpine/: image.yaml
images/dell-emc-cli/: Containerfile
images/mado/: Dockerfile
images/mkdocs_plus/: Dockerfile  requirements.txt
images/python-arcgis/: Dockerfile  pyproject.toml
images/rpmbuild-almalinux10/: Dockerfile
images/rpmbuild-almalinux8/: Dockerfile
images/rpmbuild-almalinux9/: Dockerfile
images/rpmbuild-centos-stream10/: Dockerfile
images/rpmbuild-centos-stream9/: Dockerfile
images/rpmbuild-centos7/: Dockerfile
images/rpmbuild-fedora/: Dockerfile
images/ubuntu-pdk/: Dockerfile
