[tool.poetry]
name = "arcgis-base-image"
version = "2.0.0"
description = "Base image containing Python and arcgis"
authors = ["GeoNet"]

[tool.poetry.dependencies]
python = "3.12.9"
arcgis = "2.4.1.3"
numpy = "1.26.4"
pandas = "2.2.3"
geopandas = "1.1.1"
python-dotenv = "1.1.1"
boto3 = "1.40.55"
toml = "0.10.2"
datadog-api-client = "2.44.0"
pyshp = "3.0.2.post1"
gdal = "3.11.4"
azure-storage-blob = "12.27.0"
arcgis-mapping = "4.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"