[tool.poetry]
name = "arcgis-base-image"
version = "2.0.0"
description = "Base image containing Python and arcgis"
authors = ["GeoNet"]

[tool.poetry.dependencies]
python = "3.12.9"
arcgis = "2.4.1.3"
numpy = "1.26.4"
pandas = "2.2.3"
geopandas = "1.1.2"
python-dotenv = "1.2.1"
boto3 = "1.42.49"
toml = "0.10.2"
datadog-api-client = "2.50.0"
pyshp = "3.0.3"
gdal = "3.12.2"
azure-storage-blob = "12.28.0"
arcgis-mapping = "4.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"